err/django-domande.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/South-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/django_domande-0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/django_polymorphic-1.3.dist-info'...
Listing './lib/python3.5/site-packages/domande'...
Compiling './lib/python3.5/site-packages/domande/forms.py'...
***   File "./lib/python3.5/site-packages/domande/forms.py", line 83
    raise forms.ValidationError, 'Required'
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/domande/migrations'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/polymorphic'...
Listing './lib/python3.5/site-packages/polymorphic/admin'...
Listing './lib/python3.5/site-packages/polymorphic/contrib'...
Listing './lib/python3.5/site-packages/polymorphic/formsets'...
Listing './lib/python3.5/site-packages/polymorphic/locale'...
Listing './lib/python3.5/site-packages/polymorphic/locale/en'...
Listing './lib/python3.5/site-packages/polymorphic/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/polymorphic/locale/es'...
Listing './lib/python3.5/site-packages/polymorphic/locale/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/polymorphic/locale/fr'...
Listing './lib/python3.5/site-packages/polymorphic/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/polymorphic/static'...
Listing './lib/python3.5/site-packages/polymorphic/static/polymorphic'...
Listing './lib/python3.5/site-packages/polymorphic/static/polymorphic/css'...
Listing './lib/python3.5/site-packages/polymorphic/static/polymorphic/js'...
Listing './lib/python3.5/site-packages/polymorphic/templates'...
Listing './lib/python3.5/site-packages/polymorphic/templates/admin'...
Listing './lib/python3.5/site-packages/polymorphic/templates/admin/polymorphic'...
Listing './lib/python3.5/site-packages/polymorphic/templates/admin/polymorphic/edit_inline'...
Listing './lib/python3.5/site-packages/polymorphic/templatetags'...
Listing './lib/python3.5/site-packages/polymorphic/tests'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/south'...
Listing './lib/python3.5/site-packages/south/creator'...
Listing './lib/python3.5/site-packages/south/db'...
Listing './lib/python3.5/site-packages/south/db/sql_server'...
Listing './lib/python3.5/site-packages/south/hacks'...
Listing './lib/python3.5/site-packages/south/introspection_plugins'...
Listing './lib/python3.5/site-packages/south/management'...
Listing './lib/python3.5/site-packages/south/management/commands'...
Listing './lib/python3.5/site-packages/south/migration'...
Listing './lib/python3.5/site-packages/south/tests'...
Listing './lib/python3.5/site-packages/south/tests/brokenapp'...
Listing './lib/python3.5/site-packages/south/tests/brokenapp/migrations'...
Listing './lib/python3.5/site-packages/south/tests/circular_a'...
Listing './lib/python3.5/site-packages/south/tests/circular_a/migrations'...
Listing './lib/python3.5/site-packages/south/tests/circular_b'...
Listing './lib/python3.5/site-packages/south/tests/circular_b/migrations'...
Listing './lib/python3.5/site-packages/south/tests/deps_a'...
Listing './lib/python3.5/site-packages/south/tests/deps_a/migrations'...
Listing './lib/python3.5/site-packages/south/tests/deps_b'...
Listing './lib/python3.5/site-packages/south/tests/deps_b/migrations'...
Listing './lib/python3.5/site-packages/south/tests/deps_c'...
Listing './lib/python3.5/site-packages/south/tests/deps_c/migrations'...
Listing './lib/python3.5/site-packages/south/tests/emptyapp'...
Listing './lib/python3.5/site-packages/south/tests/emptyapp/migrations'...
Listing './lib/python3.5/site-packages/south/tests/fakeapp'...
Listing './lib/python3.5/site-packages/south/tests/fakeapp/migrations'...
Listing './lib/python3.5/site-packages/south/tests/non_managed'...
Listing './lib/python3.5/site-packages/south/tests/non_managed/migrations'...
Listing './lib/python3.5/site-packages/south/tests/otherfakeapp'...
Listing './lib/python3.5/site-packages/south/tests/otherfakeapp/migrations'...
Listing './lib/python3.5/site-packages/south/utils'...
Listing './share'...
Listing './share/python-wheels'...
